--- a/templates/page/index.html.twig
+++ b/templates/page/index.html.twig
@@ -1,14 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PageController!{% endblock %}
+{% block title %}YourBook !{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
+<div>
     <h1>YourBook</h1>
+    <h2>{{ maVarTest }}</h2>
 </div>
 {% endblock %}
